<resources>
    <string name="app_name">Leaf Detection</string>
    <string name="select">Select</string>
    <string name="predict">Predict</string>
    <string name="result">Result</string>
    <string name="logIn">LogIn</string>
    <string name="signUp">SignUp</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="enterName">Name</string>
    <string name="email">Email</string>
    <string name="contactNo">Contact no</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>