<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LOGIN"
    android:orientation="vertical">



    <EditText
        android:id="@+id/nameValue"
        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:textSize="18sp"
        android:layout_marginBottom="46dp"
        android:layout_marginTop="18dp"
        android:hint="@string/username"
        android:textColorHint="#AD2B7A0B"
        app:fontFamily="sans-serif-condensed-medium"
        android:inputType="textPersonName"
        />


    <EditText
        android:id="@+id/passwordValue"
        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:textSize="18sp"
        android:hint="@string/password"
        android:textColorHint="#AD2B7A0B"
        app:fontFamily="sans-serif-condensed-medium"

        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:background="?selectableItemBackground"
        android:layout_marginTop="10dp"
        android:text="@string/forgetPassword"
        android:textSize="14sp"
        app:fontFamily="@font/acme"
        android:layout_gravity="end"/>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="26dp"
        android:text="@string/logIn" />


</LinearLayout>